<resources>
    <string name="app_name">"云码扫描"</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mian_bottom_data">数据浏览</string>
    <string name="mian_bottom_io">导入导出</string>
    <string name="mian_bottom_collect">盘点数据</string>
    <string name="mian_bottom_info">资料浏览</string>
    <string name="mian_bottom_mine">我的</string>
    <string name="_">美团</string>
    <string name="merchant_all">全部商家</string>
    <string name="merchant_sale">优惠商家</string>
    <string name="title_activity_group_buy_image_details">GroupBuyImageDetailsActivity</string>
    <string name="title_activity_today_new_order">TodayNewOrderActivity</string>
    <string name="title_activity_voucher_help">VoucherHelpActivity</string>
    <string name="no_data">没有合适的数据显示</string>
    <string name="title_activity_order">OrderActivity</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="cancel">取消</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>

    <string name="open_file_failed">文件打开失败</string>
    <string name="open_file_error_format">文件格式不正确</string>
    <string name="open_file_none">您没有选择任何文件</string>
    <string name="empty_hint">文件夹为空</string>
    <string name="sdcard_unmonted_hint">请先挂载SD卡</string>
    <string name="title_activity_file_browser">FileBrowserActivity</string>
</resources>
